--- a/app/assets/stylesheets/theme_dark.scss
+++ b/app/assets/stylesheets/theme_dark.scss
@@ -483,6 +483,14 @@ html {
     }
 }
 
+.more-button {
+    color: #888;
+    border-color: #666666;
+    &:hover {
+        color: #aaa;
+    }
+}
+
 // Scroll up
 
 #scroll-up {
@@ -1262,7 +1270,6 @@ a.uk-link-muted {
 .g-right {
     color: #999;
 }
-
 
 // New things
 
