--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -966,7 +966,7 @@ li.active:hover .opts {
 
 // Other (Search IGDB)
 .uk-tooltip {
-    box-shadow: -2px 4px 9px 1px #0000004a !important;
+    box-shadow: -2px 4px 8px 1px #00000040;
     box-sizing: border-box;
     max-width: 270px;
     padding: 3px 6px;
