--- a/app/views/games/edit_form.js.erb
+++ b/app/views/games/edit_form.js.erb
@@ -1,12 +1,12 @@
-var view = "<%= @view %>";
 var form;
 
-if (view === 'list') {
+<% if @view == 'list' %>
   $("#t-ops .modal-content").html("<%= j(render partial: 'my_games/edit_form', locals: { game: @game, collection: @collection, view: @view }) %>");
   form = 'list'
   listLight('<%= @game.id %>', 't-ops');
-} else {
+<% else %>
   $("#edit-form-<%= @game.id %>").html("<%= j(render partial: 'my_games/edit_form', locals: { game: @game, collection: @collection, view: @view }) %>");
   form = 'edit'
-}
+<% end %>
+
 preselectPlatform(form, <%= @game.id %>, <%= @game.platform %>);
