--- a/app/views/layouts/_landing.html.erb
+++ b/app/views/layouts/_landing.html.erb
@@ -12,8 +12,23 @@
     <%= favicon(theme) %>
   </head>
   <body>
-    <div id="land-pad" class="uk-container uk-container-expand">
+    <div id="land-container" class="uk-container uk-container-expand">
+
+
+      <div id="land-wrap">
+
+
       <%= yield %>
+      <footer class="lp-footer">
+        <ul>
+          <li><%= link_to "?", info_url(doc: 'about'), class: "about-link" %></li>
+          <li><%= link_to "TERMS", info_url(doc: 'terms'), class: "about-link" %></li>
+          <li><%= link_to "PRIVACY", info_url(doc: 'privacy'), class: "about-link" %></li>
+        </ul>
+      </footer>
+
+</div>
+
     </div>
   </body>
 </html>
