--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -18,8 +18,8 @@
   <%= f.button yield(:button_text), class: "uk-button sh-button",
    data: { disable_with: "<div uk-spinner=\"ratio: 0.5\"></div>" } %>
   <div class="agree">By clicking the "Create" button you agree to
-    <%= link_to 'Terms of Use', root_url, class: 'uk-link-muted' %> and
-    <%= link_to 'Privacy Policy', root_url, class: 'uk-link-muted' %>.
+    <%= link_to 'Terms of Use', info_url(doc: 'terms'), class: 'uk-link-muted' %> and
+    <%= link_to 'Privacy Policy', info_url(doc: 'privacy'), class: 'uk-link-muted' %>.
   </div>
 </div>
 <% end %>
