--- a/app/views/collections/remove_game.js.erb
+++ b/app/views/collections/remove_game.js.erb
@@ -16,7 +16,7 @@ if (success) {
     };
 
     if ($('#r-q').text().length != 0 && $('#r-s').text().length != 0) {
-        search = $('#r-q').text().split(',');
+        var search = $('#r-q').text().split(',');
         data['q'] = {
             name_dev_cont: search[0],
             plat_eq: search[1],
@@ -24,7 +24,7 @@ if (success) {
             s: $('#r-s').text()
         };
     } else if ($('#r-q').text().length != 0) {
-        search = $('#r-q').text().split(',');
+        var search = $('#r-q').text().split(',');
         data['q'] = {
             name_dev_cont: search[0],
             plat_eq: search[1],
