--- a/app/views/games/edit.js.erb
+++ b/app/views/games/edit.js.erb
@@ -24,7 +24,7 @@ if (msg) {
     var data = { type: 'refresh', view: view };
 
     if ($('#r-q').text().length != 0 && $('#r-s').text().length != 0) {
-        search = $('#r-q').text().split(',');
+        var search = $('#r-q').text().split(',');
         data['q'] = {
             name_dev_cont: search[0],
             plat_eq: search[1],
@@ -32,7 +32,7 @@ if (msg) {
             s: $('#r-s').text()
         };
     } else if ($('#r-q').text().length != 0) {
-        search = $('#r-q').text().split(',');
+        var search = $('#r-q').text().split(',');
         data['q'] = {
             name_dev_cont: search[0],
             plat_eq: search[1],
