--- a/app/views/users/_set_errors.js.erb
+++ b/app/views/users/_set_errors.js.erb
@@ -1,10 +1,10 @@
 <% if @is_it_password %>
-  $icon = $('#password-icon');
+  var $icon = $('#password-icon');
   $icon.hide();
   $icon.after("<%= j(render partial: 'shared/warning', locals: { id: 'pass-warning-icon', error: @errors.first, extra: 'set-warning' }) %>");
   resetSetWarningIcon('#change-password','#password-icon', '#pass-warning-icon');
 <% else %>
-  $icon = $('#email-icon');
+  var $icon = $('#email-icon');
   $icon.hide();
   $icon.after("<%= j(render partial: 'shared/warning', locals: { id: 'mail-warning-icon', error: @errors.join(', '), extra: 'set-warning' }) %>");
   resetSetWarningIcon('#change-mail','#email-icon', '#mail-warning-icon');
