--- a/app/assets/javascripts/theme.js.erb
+++ b/app/assets/javascripts/theme.js.erb
@@ -25,6 +25,17 @@ function changeTheme(shared) {
 }
 
 function changeThemeLp() {
+
+    function changeImages(from_to) {
+        var $images = $('img');
+        $images.each(function() {
+            var attr = $(this).attr('src');
+            $(this).attr('src', attr.replace(from_to[0], from_to[1]));
+            attr = $(this).attr('srcset');
+            $(this).attr('srcset', attr.replace(from_to[0], from_to[1]));
+        });
+    }
+
     var $switch = $('#change-theme-lp');
     $switch.off();
     $switch.click(function() {
@@ -41,6 +52,7 @@ function changeThemeLp() {
 
             $style_link.replaceWith('<%= stylesheet_link_tag "theme_default", id: "theme-control" %>');
             $favicon_link.replaceWith('<%= favicon_link_tag asset_path("favicon.ico"), id: "favicon-control" %>');
+            changeImages(['_dark.png', '.png']);
         } else {
             $(this).addClass('active');
             Cookies.set('theme', 'theme_dark', {
@@ -51,11 +63,7 @@ function changeThemeLp() {
             });
             $style_link.replaceWith('<%= stylesheet_link_tag "theme_dark", id: "theme-control" %>');
             $favicon_link.replaceWith('<%= favicon_link_tag asset_path("favicon_dark.ico"), id: "favicon-control" %>');
-
-
-
-
-
+            changeImages(['.png', '_dark.png']);
         }
     });
 }
