Add small style fixes - landing page.

--- a/app/assets/stylesheets/landing_page.scss
+++ b/app/assets/stylesheets/landing_page.scss
@@ -25,6 +25,7 @@ footer.lp-footer {
 
     div.uk-width-auto {
         margin-top: 14px;
+        padding-left: 20px;
     }
 }
 
@@ -81,7 +82,7 @@ footer.lp-footer {
     margin-bottom: 30px;
 
     span {
-        background: #d3d3d3;
+        background: #d0d0d0;
         color: #555;
         padding: 4px 4px;
         border-radius: 3px;
@@ -230,6 +231,7 @@ footer.lp-footer {
     color: #777;
     padding: 0px;
     line-height: 33px;
+    width: 144px;
 
     span {
         padding-right: 3px;
