--- a/app/assets/stylesheets/theme_dark.scss
+++ b/app/assets/stylesheets/theme_dark.scss
@@ -1216,7 +1216,7 @@ hr.md, .wf hr.md {
 }
 
 .lp-overlay {
-    background-color: #555;
+    background-color: #555555e6;
     box-shadow: 1px 2px 6px 0 #0000003d;
     color: #ccc;
 }
